Style.css update text-align (normalement la fin du bug)

--- a/Style.css
+++ b/Style.css
@@ -245,7 +245,7 @@ header li a:hover{
 	text-shadow: 0px 0px 30px black;
 	transition: all 0.2s ease-in;
 	margin-top: 125vh;
-	/*text-align: center;*/
+	text-align: center;
 }
 
 /* ********************************* Plus test affichage *************************************** */
